force-app/main/default/objects/Property__c/fields/IncentivierungMaklerUSt__c.field-meta.xml
<CustomField>
    <fullName>IncentivierungMaklerUSt__c</fullName>
    <formula>ROUND( IncentivierungMaklerNetto__c, 2 ) * 0.19</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incentivierung Makler USt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>