force-app/main/default/objects/Property__c/fields/IncentivierungPlan__c.field-meta.xml
<CustomField>
    <fullName>IncentivierungPlan__c</fullName>
    <label>Incentivierung Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>