force-app/main/default/objects/Property__c/fields/Infozeile_1__c.field-meta.xml
<CustomField>
    <fullName>Infozeile_1__c</fullName>
    <label>Infozeile_1</label>
    <type>TextArea</type>
</CustomField>