force-app/main/default/objects/Property__c/fields/Infozeile_2__c.field-meta.xml
<CustomField>
    <fullName>Infozeile_2__c</fullName>
    <label>Infozeile_2</label>
    <type>TextArea</type>
</CustomField>