force-app/main/default/objects/Property__c/fields/InspectionByDekra__c.field-meta.xml
<CustomField>
    <fullName>InspectionByDekra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prüfung durch DEKRA</label>
    <type>Checkbox</type>
</CustomField>