force-app/main/default/objects/Property__c/fields/Instandhaltung_setzung__c.field-meta.xml
<CustomField>
    <fullName>Instandhaltung_setzung__c</fullName>
    <label>Instandhaltung/-setzung</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Net</fullName>
            </value>
            <value>
                <fullName>Double Net</fullName>
            </value>
            <value>
                <fullName>Triple Net</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>