force-app/main/default/objects/Property__c/fields/InstandhaltungOnce__c.field-meta.xml
<CustomField>
    <fullName>InstandhaltungOnce__c</fullName>
    <description>Einmalige Instandhaltungsrücklage, die den Gesamtaufwand der Immobilie erhöht, ohne dabei den Kaufpreis (und somit die GrESt/Notarkosten) zu erhöhen.</description>
    <inlineHelpText>Einmalige Instandhaltungsrücklage, die den Gesamtaufwand der Immobilie erhöht, ohne dabei den Kaufpreis (und somit die GrESt/Notarkosten) zu erhöhen.</inlineHelpText>
    <label>Instandhaltungsrücklage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>