force-app/main/default/objects/Property__c/fields/Investment__c.field-meta.xml
<CustomField>
    <fullName>Investment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Investment</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>