force-app/main/default/objects/Property__c/fields/IVA1__c.field-meta.xml
<CustomField>
    <fullName>IVA1__c</fullName>
    <label>IVA 1</label>
    <type>Date</type>
</CustomField>