force-app/main/default/objects/Property__c/fields/IVA1genehmigt__c.field-meta.xml
<CustomField>
    <fullName>IVA1genehmigt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IVA 1 genehmigt</label>
    <type>Checkbox</type>
</CustomField>