force-app/main/default/objects/Property__c/fields/IVA2__c.field-meta.xml
<CustomField>
    <fullName>IVA2__c</fullName>
    <label>IVA 2</label>
    <type>Date</type>
</CustomField>