force-app/main/default/objects/Property__c/fields/IVA2Genehmigt__c.field-meta.xml
<CustomField>
    <fullName>IVA2Genehmigt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IVA 2 genehmigt</label>
    <type>Checkbox</type>
</CustomField>