force-app/main/default/objects/Property__c/fields/JointVenturePartner__c.field-meta.xml
<CustomField>
    <fullName>JointVenturePartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Joint-Venture-Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Immobilien (Joint-Venture-Partner)</relationshipLabel>
    <relationshipName>JointVentureImmobilien</relationshipName>
    <type>Lookup</type>
</CustomField>