force-app/main/default/objects/Property__c/fields/Kaufpreisfaelligkeit__c.field-meta.xml
<CustomField>
    <fullName>Kaufpreisfaelligkeit__c</fullName>
    <label>Kaufpreisfälligkeit</label>
    <type>Date</type>
</CustomField>