force-app/main/default/objects/Property__c/fields/Kaufpreishoehe__c.field-meta.xml
<CustomField>
    <fullName>Kaufpreishoehe__c</fullName>
    <label>Kaufpreishöhe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>