force-app/main/default/objects/Property__c/fields/Kaufpreiszahlung__c.field-meta.xml
<CustomField>
    <fullName>Kaufpreiszahlung__c</fullName>
    <label>Kaufpreiszahlung</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MaBV</fullName>
            </value>
            <value>
                <fullName>Endfällig</fullName>
            </value>
            <value>
                <fullName>Externes Vertriebsprojekt (MaBV)</fullName>
            </value>
            <value>
                <fullName>Externes Vertriebsprojekt (Endfällig)</fullName>
            </value>
            <value>
                <fullName>Bestand</fullName>
                <isActive>false</isActive>
                <label>Bestand</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>