force-app/main/default/objects/Property__c/fields/KeineBauzeitzinsen__c.field-meta.xml
<CustomField>
    <fullName>KeineBauzeitzinsen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keine Bauzeitzinsen</label>
    <type>Checkbox</type>
</CustomField>