force-app/main/default/objects/Property__c/fields/KeineGutschriften__c.field-meta.xml
<CustomField>
    <fullName>KeineGutschriften__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keine Gutschriften</label>
    <type>Checkbox</type>
</CustomField>