force-app/main/default/objects/Property__c/fields/KfWBeantragtVon__c.field-meta.xml
<CustomField>
    <fullName>KfWBeantragtVon__c</fullName>
    <label>KfW beantragt von</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entwickler</fullName>
            </value>
            <value>
                <fullName>Carestone</fullName>
            </value>
            <value>
                <fullName>Endkunde</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>