force-app/main/default/objects/Property__c/fields/KfWFoerderungInfoImImmoframeAnzeigen__c.field-meta.xml
<CustomField>
    <fullName>KfWFoerderungInfoImImmoframeAnzeigen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KfW Förderung Info im Immoframe anzeigen</label>
    <type>Checkbox</type>
</CustomField>