force-app/main/default/objects/Property__c/fields/KfWGenehmigt__c.field-meta.xml
<CustomField>
    <fullName>KfWGenehmigt__c</fullName>
    <label>KfW genehmigt</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>KfWBeantragtVon__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ja</fullName>
            </value>
            <value>
                <fullName>Nein</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>