force-app/main/default/objects/Property__c/fields/KfWMittelVerfuegbar__c.field-meta.xml
<CustomField>
    <fullName>KfWMittelVerfuegbar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KfW-Mittel verfügbar</label>
    <type>Checkbox</type>
</CustomField>