force-app/main/default/objects/Property__c/fields/KommentarFiBu__c.field-meta.xml
<CustomField>
    <fullName>KommentarFiBu__c</fullName>
    <label>Kommentar FiBu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>