force-app/main/default/objects/Property__c/fields/KommentarZentralprozesse__c.field-meta.xml
<CustomField>
    <fullName>KommentarZentralprozesse__c</fullName>
    <label>Kommentar Zentralprozesse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>