force-app/main/default/objects/Property__c/fields/KPFaktorGIK__c.field-meta.xml
<CustomField>
    <fullName>KPFaktorGIK__c</fullName>
    <label>KP-Faktor inkl. NK ( auf GIK)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>