force-app/main/default/objects/Property__c/fields/KPFaktorKaufpreis__c.field-meta.xml
<CustomField>
    <fullName>KPFaktorKaufpreis__c</fullName>
    <label>KP-Faktor exkl. NK ( auf Kaufpreis)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>