force-app/main/default/objects/Property__c/fields/Lagebeschreibung__c.field-meta.xml
<CustomField>
    <fullName>Lagebeschreibung__c</fullName>
    <label>Lagebeschreibung</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>