force-app/main/default/objects/Property__c/fields/LaufzeitendeDarlehen__c.field-meta.xml
<CustomField>
    <fullName>LaufzeitendeDarlehen__c</fullName>
    <label>Laufzeitende Darlehen</label>
    <type>Date</type>
</CustomField>