force-app/main/default/objects/Property__c/fields/LetztesKaufdatum__c.field-meta.xml
<CustomField>
    <fullName>LetztesKaufdatum__c</fullName>
    <inlineHelpText>Wann wurde das letzte Teilobjekt verkauft?</inlineHelpText>
    <label>Letztes Kaufdatum</label>
    <summarizedField>Appartment__c.Notartermin__c</summarizedField>
    <summaryForeignKey>Appartment__c.Property__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>