force-app/main/default/objects/Property__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <description>Link to Property Logo</description>
    <label>Logo</label>
    <type>Url</type>
</CustomField>