force-app/main/default/objects/Property__c/fields/Logo_Tmb__c.field-meta.xml
<CustomField>
    <fullName>Logo_Tmb__c</fullName>
    <description>thumbnail of logo image</description>
    <label>Logo_Tmb</label>
    <type>Url</type>
</CustomField>