force-app/main/default/objects/Property__c/fields/MaBV__c.field-meta.xml
<CustomField>
    <fullName>MaBV__c</fullName>
    <label>Energiestandard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KfW-Mittel</fullName>
            </value>
            <value>
                <fullName>KfW 40</fullName>
            </value>
            <value>
                <fullName>KfW 40 (EE)</fullName>
            </value>
            <value>
                <fullName>KfW 40 (NH)</fullName>
            </value>
            <value>
                <fullName>KfW 55</fullName>
            </value>
            <value>
                <fullName>KfW 55 (EE)</fullName>
            </value>
            <value>
                <fullName>KfW 70</fullName>
            </value>
            <value>
                <fullName>Ohne MaBV</fullName>
            </value>
            <value>
                <fullName>KfW 85</fullName>
            </value>
            <value>
                <fullName>KfW 95</fullName>
                <isActive>false</isActive>
                <label>KfW 95</label>
            </value>
            <value>
                <fullName>KfW-40 (EE)</fullName>
                <isActive>false</isActive>
                <label>KfW-40 (EE)</label>
            </value>
            <value>
                <fullName>KfW-55 (EE)</fullName>
                <isActive>false</isActive>
                <label>KfW-55 (EE)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>