force-app/main/default/objects/Property__c/fields/MaBVAbgerechnet__c.field-meta.xml
<CustomField>
    <fullName>MaBVAbgerechnet__c</fullName>
    <label>MaBV abgerechnet</label>
    <summarizedField>Appartment__c.MaBVAbgerechnet__c</summarizedField>
    <summaryForeignKey>Appartment__c.Property__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>