force-app/main/default/objects/Property__c/fields/MaBVBezahlt__c.field-meta.xml
<CustomField>
    <fullName>MaBVBezahlt__c</fullName>
    <label>MaBV bezahlt</label>
    <summarizedField>Appartment__c.MaBVBezahlt__c</summarizedField>
    <summaryForeignKey>Appartment__c.Property__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>