force-app/main/default/objects/Property__c/fields/MaBVRechnungenUeberSalesforce__c.field-meta.xml
<CustomField>
    <fullName>MaBVRechnungenUeberSalesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Dieses Feld dient nur der Validierung von fehlenden Daten. Sobald eine MaBV Rate angelegt wird, werden Rechnungen unabhängig von diesem Feld generiert</inlineHelpText>
    <label>MaBV Rechnungen über Salesforce</label>
    <type>Checkbox</type>
</CustomField>