force-app/main/default/objects/Property__c/fields/Mahnstopp__c.field-meta.xml
<CustomField>
    <fullName>Mahnstopp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mahnstopp</label>
    <type>Checkbox</type>
</CustomField>