force-app/main/default/objects/Property__c/fields/MahnstoppKommentar__c.field-meta.xml
<CustomField>
    <fullName>MahnstoppKommentar__c</fullName>
    <label>Mahnstopp Kommentar</label>
    <type>TextArea</type>
</CustomField>