force-app/main/default/objects/Property__c/fields/Maintenance_Cost_Increase_After_Years__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Cost_Increase_After_Years__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Maintenance Cost Increase After Years</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>