force-app/main/default/objects/Property__c/fields/maintenance_sqm_p_a__c.field-meta.xml
<CustomField>
    <fullName>maintenance_sqm_p_a__c</fullName>
    <defaultValue>2</defaultValue>
    <label>maintenance sqm (p.a)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>