force-app/main/default/objects/Property__c/fields/Maklercourtage_p__c.field-meta.xml
<CustomField>
    <fullName>Maklercourtage_p__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Maklercourtage (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>