force-app/main/default/objects/Property__c/fields/MaklerprovisionBrutto__c.field-meta.xml
<CustomField>
    <fullName>MaklerprovisionBrutto__c</fullName>
    <formula>ROUND( MaklerprovisionNetto__c, 2 ) + ROUND( MaklerprovisionUSt__c, 2 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maklerprovision Brutto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>