force-app/main/default/objects/Property__c/fields/MaklerprovisionGezahltBrutto__c.field-meta.xml
<CustomField>
    <fullName>MaklerprovisionGezahltBrutto__c</fullName>
    <label>Maklerprovision gezahlt Brutto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>