force-app/main/default/objects/Property__c/fields/MaklerprovisionNetto__c.field-meta.xml
<CustomField>
    <fullName>MaklerprovisionNetto__c</fullName>
    <label>Maklerprovision Netto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>