force-app/main/default/objects/Property__c/fields/MaklerprovisionUSt__c.field-meta.xml
<CustomField>
    <fullName>MaklerprovisionUSt__c</fullName>
    <formula>ROUND( MaklerprovisionNetto__c, 2 ) * 0.19</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maklerprovision USt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>