force-app/main/default/objects/Property__c/fields/Manager_Cost_p_a__c.field-meta.xml
<CustomField>
    <fullName>Manager_Cost_p_a__c</fullName>
    <defaultValue>390</defaultValue>
    <label>Manager Cost (p.a)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>