force-app/main/default/objects/Property__c/fields/Marge__c.field-meta.xml
<CustomField>
    <fullName>Marge__c</fullName>
    <label>Marge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>