force-app/main/default/objects/Property__c/fields/MarketingNotizenProjektentwicklung__c.field-meta.xml
<CustomField>
    <fullName>MarketingNotizenProjektentwicklung__c</fullName>
    <defaultValue>&apos;Exposé: 0%&apos; + BR() + &apos;Factsheet: 0%&apos;</defaultValue>
    <label>Marketing Notizen Projektentwicklung</label>
    <type>TextArea</type>
</CustomField>