force-app/main/default/objects/Property__c/fields/MarketingzuschussBrutto__c.field-meta.xml
<CustomField>
    <fullName>MarketingzuschussBrutto__c</fullName>
    <formula>ROUND( MarketingzuschussNetto__c, 2 ) + ROUND( MarketingzuschussUSt__c, 2 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketingzuschuss Brutto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>