force-app/main/default/objects/Property__c/fields/MarketingzuschussGezahltBrutto__c.field-meta.xml
<CustomField>
    <fullName>MarketingzuschussGezahltBrutto__c</fullName>
    <label>Marketingzuschuss gezahlt Brutto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>