force-app/main/default/objects/Property__c/fields/MarketingzuschussNetto__c.field-meta.xml
<CustomField>
    <fullName>MarketingzuschussNetto__c</fullName>
    <label>Marketingzuschuss Netto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>