force-app/main/default/objects/Property__c/fields/MaximaleAbschreibungsmoeglichkeiten__c.field-meta.xml
<CustomField>
    <fullName>MaximaleAbschreibungsmoeglichkeiten__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maximale Abschreibung</label>
    <type>Checkbox</type>
</CustomField>