force-app/main/default/objects/Property__c/fields/MDKBerichtTextfeld__c.field-meta.xml
<CustomField>
    <fullName>MDKBerichtTextfeld__c</fullName>
    <label>MDK-Bericht</label>
    <length>255</length>
    <type>Text</type>
</CustomField>