force-app/main/default/objects/Property__c/fields/Mietdauer__c.field-meta.xml
<CustomField>
    <fullName>Mietdauer__c</fullName>
    <label>Mietdauer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>