force-app/main/default/objects/Property__c/fields/MieteVon__c.field-meta.xml
<CustomField>
    <fullName>MieteVon__c</fullName>
    <label>Miete von</label>
    <summarizedField>Appartment__c.Monthly_Rent__c</summarizedField>
    <summaryFilterItems>
        <field>Appartment__c.ExternNichtAnzeigen__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Appartment__c.Property__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>