force-app/main/default/objects/Property__c/fields/MiethoeheISTJahr__c.field-meta.xml
<CustomField>
    <fullName>MiethoeheISTJahr__c</fullName>
    <label>Miethöhe IST / Jahr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>