force-app/main/default/objects/Property__c/fields/MiethoeheSOLLJahr__c.field-meta.xml
<CustomField>
    <fullName>MiethoeheSOLLJahr__c</fullName>
    <label>Miethöhe SOLL / Jahr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>