force-app/main/default/objects/Property__c/fields/Mietsicherheit__c.field-meta.xml
<CustomField>
    <fullName>Mietsicherheit__c</fullName>
    <label>Mietsicherheit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>