force-app/main/default/objects/Property__c/fields/Mietzahlung__c.field-meta.xml
<CustomField>
    <fullName>Mietzahlung__c</fullName>
    <label>Mietzahlung</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sofortige Mietzahlung</fullName>
            </value>
            <value>
                <fullName>Mietzahlung im nächsten Jahr</fullName>
            </value>
            <value>
                <fullName>Mietzahlung übernächstes Jahr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>