force-app/main/default/objects/Property__c/fields/Min_Rendite__c.field-meta.xml
<CustomField>
    <fullName>Min_Rendite__c</fullName>
    <label>Min Rendite</label>
    <summarizedField>Appartment__c.Rental_return_old__c</summarizedField>
    <summaryFilterItems>
        <field>Appartment__c.ExternNichtAnzeigen__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Appartment__c.Property__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>