force-app/main/default/objects/Property__c/fields/Modernisierung__c.field-meta.xml
<CustomField>
    <fullName>Modernisierung__c</fullName>
    <label>Modernisierung</label>
    <length>255</length>
    <type>Text</type>
</CustomField>