force-app/main/default/objects/Property__c/fields/MonatsmieteBeiVerkauf__c.field-meta.xml
<CustomField>
    <fullName>MonatsmieteBeiVerkauf__c</fullName>
    <label>Monatsmiete bei Verkauf</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>