force-app/main/default/objects/Property__c/fields/MonumentDepreciation__c.field-meta.xml
<CustomField>
    <fullName>MonumentDepreciation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Denkmal Afa</label>
    <type>Checkbox</type>
</CustomField>