force-app/main/default/objects/Property__c/fields/NachtraegeZumMietvertrag__c.field-meta.xml
<CustomField>
    <fullName>NachtraegeZumMietvertrag__c</fullName>
    <label>Nachträge zum Mietvertrag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>