force-app/main/default/objects/Property__c/fields/Nachtrag_n_tig__c.field-meta.xml
<CustomField>
    <fullName>Nachtrag_n_tig__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nachtrag nötig</label>
    <type>Checkbox</type>
</CustomField>