force-app/main/default/objects/Property__c/fields/Nachtrag_Provision__c.field-meta.xml
<CustomField>
    <fullName>Nachtrag_Provision__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Nachtrag Provision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>