force-app/main/default/objects/Property__c/fields/NameDerEinrichtung__c.field-meta.xml
<CustomField>
    <fullName>NameDerEinrichtung__c</fullName>
    <label>Name der Einrichtung</label>
    <length>255</length>
    <type>Text</type>
</CustomField>