force-app/main/default/objects/Property__c/fields/NebenkostenKauf__c.field-meta.xml
<CustomField>
    <fullName>NebenkostenKauf__c</fullName>
    <label>Nebenkosten Kauf</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>