force-app/main/default/objects/Property__c/fields/Nebenkostenuebernahme__c.field-meta.xml
<CustomField>
    <fullName>Nebenkostenuebernahme__c</fullName>
    <label>Nebenkostenübernahme</label>
    <type>Date</type>
</CustomField>