force-app/main/default/objects/Property__c/fields/Nettoraumflaeche__c.field-meta.xml
<CustomField>
    <fullName>Nettoraumflaeche__c</fullName>
    <label>NRF (qm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>