force-app/main/default/objects/Property__c/fields/NeuerBetreiberBeiWechsel__c.field-meta.xml
<CustomField>
    <fullName>NeuerBetreiberBeiWechsel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>neuer Betreiber bei Wechsel</label>
    <referenceTo>Betreiber__c</referenceTo>
    <relationshipLabel>Immobilien (neuer Betreiber bei Wechsel)</relationshipLabel>
    <relationshipName>NeuBeiWechselImmobilien</relationshipName>
    <type>Lookup</type>
</CustomField>