force-app/main/default/objects/Property__c/fields/Notar__c.field-meta.xml
<CustomField>
    <fullName>Notar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notar</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Immobilien</relationshipLabel>
    <relationshipName>Immobilien</relationshipName>
    <type>Lookup</type>
</CustomField>