force-app/main/default/objects/Property__c/fields/NotarAnkauf__c.field-meta.xml
<CustomField>
    <fullName>NotarAnkauf__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notar Ankauf</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Immobilien (Notar Ankauf)</relationshipLabel>
    <relationshipName>NotarAnkaufImmobilien</relationshipName>
    <type>Lookup</type>
</CustomField>