force-app/main/default/objects/Property__c/fields/Notary_And_Court_Cost__c.field-meta.xml
<CustomField>
    <fullName>Notary_And_Court_Cost__c</fullName>
    <formula>0.015* Property_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notary And Court Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>