force-app/main/default/objects/Property__c/fields/Notary_And_Court_Rate__c.field-meta.xml
<CustomField>
    <fullName>Notary_And_Court_Rate__c</fullName>
    <defaultValue>0.015</defaultValue>
    <description>Notariats und Gerichtskosten Satz in Prozent</description>
    <label>Notary And Court Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>