force-app/main/default/objects/Property__c/fields/ObjektartProjektentwicklung__c.field-meta.xml
<CustomField>
    <fullName>ObjektartProjektentwicklung__c</fullName>
    <label>Objektart Projektentwicklung</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entwicklung</fullName>
            </value>
            <value>
                <fullName>Vertrieb</fullName>
            </value>
            <value>
                <fullName>Bestand</fullName>
            </value>
            <value>
                <fullName>Ersatz Neubau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>