force-app/main/default/objects/Property__c/fields/Objektnummer__c.field-meta.xml
<CustomField>
    <fullName>Objektnummer__c</fullName>
    <label>Immobiliennummer</label>
    <length>35</length>
    <type>Text</type>
</CustomField>