force-app/main/default/objects/Property__c/fields/Objektvideo_Link__c.field-meta.xml
<CustomField>
    <fullName>Objektvideo_Link__c</fullName>
    <label>Objektvideo Youtube ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>