force-app/main/default/objects/Property__c/fields/ObjektvideoZweiYoutubeId__c.field-meta.xml
<CustomField>
    <fullName>ObjektvideoZweiYoutubeId__c</fullName>
    <label>Objektvideo 2 Youtube ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>