force-app/main/default/objects/Property__c/fields/OffenerBetragEinmalzahlungen__c.field-meta.xml
<CustomField>
    <fullName>OffenerBetragEinmalzahlungen__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Offener Betrag (Einmalzahlungen Gesamt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>