force-app/main/default/objects/Property__c/fields/OffenerBetragGesamt__c.field-meta.xml
<CustomField>
    <fullName>OffenerBetragGesamt__c</fullName>
    <formula>IF(!ISBLANK(OffenerBetragMaBVGesamt__c), OffenerBetragMaBVGesamt__c, 0) + IF(!ISBLANK(OffenerBetragEinmalzahlungen__c),OffenerBetragEinmalzahlungen__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offener Betrag (Gesamt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>