force-app/main/default/objects/Property__c/fields/OffenerBetragMaBVGesamt__c.field-meta.xml
<CustomField>
    <fullName>OffenerBetragMaBVGesamt__c</fullName>
    <label>Offener Betrag (MaBV Gesamt)</label>
    <summarizedField>MaBVRate__c.SummeOffenerRechnungen__c</summarizedField>
    <summaryForeignKey>MaBVRate__c.Immobilie__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>