force-app/main/default/objects/Property__c/fields/OffeneRechnungenAktuellerRate__c.field-meta.xml
<CustomField>
    <fullName>OffeneRechnungenAktuellerRate__c</fullName>
    <formula>AktuelleMaBVRateLookup__r.OffeneRechnungen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offene Rechnungen (akt. Rate)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>