force-app/main/default/objects/Property__c/fields/OfferedObject__c.field-meta.xml
<CustomField>
    <fullName>OfferedObject__c</fullName>
    <label>Angebotsobjekt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grundstück</fullName>
            </value>
            <value>
                <fullName>Projekt</fullName>
            </value>
            <value>
                <fullName>Bestand</fullName>
            </value>
            <value>
                <fullName>Sonstiges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>