force-app/main/default/objects/Property__c/fields/OfferReceipt__c.field-meta.xml
<CustomField>
    <fullName>OfferReceipt__c</fullName>
    <label>Angebotseingang</label>
    <type>Date</type>
</CustomField>