force-app/main/default/objects/Property__c/fields/Operating_Company__c.field-meta.xml
<CustomField>
    <fullName>Operating_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operating Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Properties1</relationshipName>
    <type>Lookup</type>
</CustomField>