force-app/main/default/objects/Property__c/fields/PachtvertragUnterzeichnet__c.field-meta.xml
<CustomField>
    <fullName>PachtvertragUnterzeichnet__c</fullName>
    <label>Pachtvertrag unterzeichnet</label>
    <type>Date</type>
</CustomField>