force-app/main/default/objects/Property__c/fields/Parent_Operating_Company__c.field-meta.xml
<CustomField>
    <fullName>Parent_Operating_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Operating Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Properties2</relationshipName>
    <type>Lookup</type>
</CustomField>