force-app/main/default/objects/Property__c/fields/Percent_Appreciation_Value__c.field-meta.xml
<CustomField>
    <fullName>Percent_Appreciation_Value__c</fullName>
    <defaultValue>0.05</defaultValue>
    <label>Percent Appreciation Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>