force-app/main/default/objects/Property__c/fields/Percent_Increase_In_Rent__c.field-meta.xml
<CustomField>
    <fullName>Percent_Increase_In_Rent__c</fullName>
    <defaultValue>0.05</defaultValue>
    <label>Percent Increase In Rent</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>